@@ -4,6 +4,7 @@
         - New fastloader: G.I. Joe (said to be commonly ripped)
         - New fastloader: Epyx FastLoad cartridge
         - Support reading raw directory ($ with secondary > 0)
+        - "display disk images as directories"-mode
 
 2009-09-27 - release 0.8.2
         - Bugfix: Prevent random storage corruption on FAT32 media
